# agentic-rag

./: .env  README.md  main.py  pyproject.toml
chat/: augmented_ask.py  ds_chat.py  model_ds.py
embedding/openai_style/: openai_embedding.py
extract/markitdown/: file_markitdown.py
extract/pymupdf4llm/: file_pymupdf4llm.py  output.md
extract/pymupdf4llm_langchain/: file_pymupdf4llm_langchain.py
extraction/pdfminer/: file_pdfminer.py
server/: rag_server.py
splitter/markdown_splitter/: md_splitter.py
utils_d/: common.py
